# tpx-ai

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  lib.rs  ollama.rs
extensions/email-summary/: PLAN.md
lua/git-commit-ai/: init.lua
scripts/angular-bundle-analysis/: eager-importers.mjs  initial-bundle.mjs  lib.mjs  package-breakdown.mjs  simulate-cut.mjs
skills/angular-bundle-analysis/: SKILL.md
skills/angular-bundle-analysis/scripts/: eager-importers.mjs  initial-bundle.mjs  lib.mjs  package-breakdown.mjs  simulate-cut.mjs
tools/claude-status/: Cargo.toml
tools/claude-status/src/: main.rs
tools/git-commit/: Cargo.toml  README.md
tools/git-commit/evals/: README.md  run.sh
tools/git-commit/evals/fixtures/: niri-media-keys.diff  niri-media-keys.expected.md  off-by-one-fix.diff  off-by-one-fix.expected.md  rate-limiter.diff  rate-limiter.expected.md
tools/git-commit/src/: config.rs  main.rs
